# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--jdavid@itaapy.com--public/itools--main--0.11
#

2005-10-18 15:19:18 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-24

    Summary:
      web, fix "context.has_cookie"
    Revision:
      itools--main--0.11--patch-24


    modified files:
     Changelog web/context.py


2005-10-18 15:01:37 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-23

    Summary:
      web, add "has_cookie" to the context API
    Revision:
      itools--main--0.11--patch-23


    modified files:
     Changelog web/context.py


2005-10-18 14:00:27 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-22

    Summary:
      web, now "context.redirect" uses "resolve2" instead of "resolve"
    Revision:
      itools--main--0.11--patch-22


    modified files:
     Changelog web/context.py


2005-10-18 13:59:57 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-21

    Summary:
      uri, add "Reference.resolve2" method to the API
    Revision:
      itools--main--0.11--patch-21


    modified files:
     Changelog uri/generic.py


2005-10-18 13:06:22 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-20

    Summary:
      web, add "context.redirect" to the API (solves #62)
    Revision:
      itools--main--0.11--patch-20


    modified files:
     Changelog web/context.py


2005-10-18 11:05:18 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-19

    Summary:
      web, encode cookies on response serialization (use itools.schemas)
    Revision:
      itools--main--0.11--patch-19


    modified files:
     Changelog web/response.py


2005-10-18 11:03:40 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-18

    Summary:
      schemas, add "get_datatype_by_prefix" to the API
    Revision:
      itools--main--0.11--patch-18


    modified files:
     Changelog schemas/registry.py


2005-10-18 10:18:43 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-17

    Summary:
      doc, update stl usage in the tasktracker examples
    Revision: