@@ -20,6 +20,8 @@ import cStringIO
 
 # Import from itools
 from itools import uri
+from itools.datatypes import QName
+from itools import schemas
 from itools.resources import memory
 from itools.i18n.accept import AcceptCharset, AcceptLanguage
 from itools.web.context import Context, set_context
@@ -104,7 +106,12 @@ def init(zope_request):
         request.set_parameter(name, value)
 
     # The cookies
-    request.state.cookies = zope_request.cookies
+    for name in zope_request.cookies:
+        value = zope_request.cookies[name]
+        prefix, local_name = QName.decode(name)
+        datatype = schemas.registry.get_datatype_by_prefix(prefix, local_name)
+        value = datatype.decode(value)
+        request.set_cookie(name, value)
 
     # Build the context
     context = Context(request)
