@@ -2,6 +2,18 @@
 # arch-tag: automatic-ChangeLog--jdavid@itaapy.com--public/itools--main--0.11
 #
 
+2005-10-18 17:20:15 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-25
+
+    Summary:
+      web, decode cookie values with the schema
+    Revision:
+      itools--main--0.11--patch-25
+
+
+    modified files:
+     Changelog web/zope2.py
+
+
 2005-10-18 15:19:18 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-24
 
     Summary:
